* Thu Jun 16 Scott Stark <sstark@redhat.com>
- Update to jbossas-7.0.0.Beta6OS

* Sun Apr 3 Scott Stark <sstark@redhat.com>
- Initial jbossas7 cartridge