@@ -1,92 +1,39 @@
-<!--
-  ~ JBoss, Home of Professional Open Source.
-  ~ Copyright 2011, Red Hat, Inc., and individual contributors
-  ~ as indicated by the @author tags. See the copyright.txt file in the
-  ~ distribution for a full listing of individual contributors.
-  ~
-  ~ This is free software; you can redistribute it and/or modify it
-  ~ under the terms of the GNU Lesser General Public License as
-  ~ published by the Free Software Foundation; either version 2.1 of
-  ~ the License, or (at your option) any later version.
-  ~
-  ~ This software is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-  ~ Lesser General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU Lesser General Public
-  ~ License along with this software; if not, write to the Free
-  ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-  ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
-  -->
+<?xml version='1.0' encoding='UTF-8'?>
 
-<server name="example"
-        xmlns="urn:jboss:domain:1.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="urn:jboss:domain:1.0 jboss_7_0.xsd
-                            urn:jboss:domain:jca:1.0 jboss-jca.xsd
-                            urn:jboss:domain:datasources:1.0 jboss-datasources.xsd
-                            urn:jboss:domain:ejb3:1.0 jboss-ejb3.xsd
-                            urn:jboss:domain:ee:1.0 jboss-ee.xsd
-                            urn:jboss:domain:infinispan:1.0 jboss-infinispan.xsd
-                            urn:jboss:domain:jacorb:1.0 jboss-jacorb.xsd
-                            urn:jboss:domain:jaxrs:1.0 jboss-jaxrs.xsd
-                            urn:jboss:domain:jmx:1.0 jboss-jmx.xsd
-                            urn:jboss:domain:jpa:1.0 jboss-jpa.xsd
-                            urn:jboss:domain:messaging:1.0 jboss-messaging.xsd
-                            urn:jboss:domain:naming:1.0 jboss-naming.xsd
-                            urn:jboss:domain:osgi:1.0 jboss-osgi.xsd
-                            urn:jboss:domain:remoting:1.0 jboss-remoting.xsd
-                            urn:jboss:domain:resourceadapters:1.0 jboss-resource-adapters.xsd
-                            urn:jboss:domain:sar:1.0 jboss-sar.xsd
-                            urn:jboss:domain:threads:1.0 jboss-threads.xsd
-                            urn:jboss:domain:transactions:1.0 jboss-txn.xsd
-                            urn:jboss:domain:web:1.0 jboss-web.xsd
-                            urn:jboss:domain:deployment-scanner:1.0 jboss-deployment-scanner.xsd
-                            urn:jboss:domain:security:1.0 jboss-security.xsd
-                            urn:jboss:domain:webservices:1.0 jboss-webservices.xsd
-                            urn:jboss:domain:weld:1.0 jboss-weld.xsd">
-
+<server name="example" xmlns="urn:jboss:domain:1.0">
     <extensions>
-        <extension module="org.jboss.as.clustering"/>
+        <extension module="org.jboss.as.clustering.infinispan"/>
         <extension module="org.jboss.as.connector"/>
         <extension module="org.jboss.as.deployment-scanner"/>
         <extension module="org.jboss.as.ee"/>
         <extension module="org.jboss.as.ejb3"/>
-        <extension module="org.jboss.as.jacorb"/>
         <extension module="org.jboss.as.jaxrs"/>
         <extension module="org.jboss.as.jmx"/>
         <extension module="org.jboss.as.jpa"/>
         <extension module="org.jboss.as.logging"/>
-        <extension module="org.jboss.as.messaging"/>
-        <extension module="org.jboss.as.modcluster"/>
         <extension module="org.jboss.as.naming"/>
-        <extension module="org.jboss.as.osgi"/>
         <extension module="org.jboss.as.remoting"/>
         <extension module="org.jboss.as.sar"/>
         <extension module="org.jboss.as.security"/>
         <extension module="org.jboss.as.threads"/>
         <extension module="org.jboss.as.transactions"/>
-        <extension module="org.jboss.as.web" />
-        <extension module="org.jboss.as.webservices" />
-        <extension module="org.jboss.as.weld" />
+        <extension module="org.jboss.as.web"/>
+        <extension module="org.jboss.as.weld"/>
     </extensions>
-
     <paths>
-       <path name="absolute" path="tmp"/>
-       <path name="relative" path="relative" relative-to="absolute"/>
+        <path name="absolute" path="tmp"/>
+        <path name="relative" path="relative" relative-to="absolute"/>
     </paths>
 
     <profile>
         <subsystem xmlns="urn:jboss:domain:logging:1.0">
-            <console-handler name="CONSOLE">
+            <console-handler name="CONSOLE" autoflush="true">
                 <level name="INFO"/>
                 <formatter>
                     <pattern-formatter pattern="%d{HH:mm:ss,SSS} %-5p [%c] (%t) %s%E%n"/>
                 </formatter>
             </console-handler>
-
-            <periodic-rotating-file-handler name="FILE">
+            <periodic-rotating-file-handler name="FILE" autoflush="true">
                 <level name="INFO"/>
                 <formatter>
                     <pattern-formatter pattern="%d{HH:mm:ss,SSS} %-5p [%c] (%t) %s%E%n"/>
@@ -94,7 +41,6 @@
                 <file relative-to="jboss.server.log.dir" path="server.log"/>
                 <suffix value=".yyyy-MM-dd"/>
             </periodic-rotating-file-handler>
-
             <logger category="com.arjuna">
                 <level name="WARN"/>
             </logger>
@@ -107,11 +53,9 @@
             <logger category="jacorb">
                 <level name="WARN"/>
             </logger>
-            <!-- set jacorb.config to ERROR to avoid the "jacorb.properties not found" messages during startup -->
             <logger category="jacorb.config">
                 <level name="ERROR"/>
             </logger>
-
             <root-logger>
                 <level name="INFO"/>
                 <handlers>
@@ -121,20 +65,16 @@
             </root-logger>
         </subsystem>
         <subsystem xmlns="urn:jboss:domain:threads:1.0">
-            <scheduled-thread-pool name="remoting">
-                <max-threads count="10" per-cpu="20"/>
-                <keepalive-time time="10" unit="seconds"/>
-            </scheduled-thread-pool>
-            <bounded-queue-thread-pool name="ejb3-async" blocking="true">
+            <bounded-queue-thread-pool name="ejb3-async" blocking="true" allow-core-timeout="false">
                 <core-threads count="10" per-cpu="20"/>
                 <queue-length count="10" per-cpu="20"/>
                 <max-threads count="10" per-cpu="20"/>
-                <keepalive-time time="10" unit="seconds"/>
+                <keepalive-time time="10" unit="SECONDS"/>
             </bounded-queue-thread-pool>
         </subsystem>
-        <subsystem xmlns="urn:jboss:domain:ee:1.0" />
-        <subsystem xmlns="urn:jboss:domain:ejb3:1.0" />
-        <subsystem xmlns="urn:jboss:domain:naming:1.0" />
+        <subsystem xmlns="urn:jboss:domain:ee:1.0"/>
+        <subsystem xmlns="urn:jboss:domain:ejb3:1.0"/>
+        <subsystem xmlns="urn:jboss:domain:naming:1.0"/>
         <subsystem xmlns="urn:jboss:domain:infinispan:1.0" default-cache-container="hibernate">
             <cache-container name="hibernate" default-cache="local-query">
                 <local-cache name="entity">
@@ -159,92 +99,116 @@
                 </security-domain>
             </security-domains>
         </subsystem>
-
         <subsystem xmlns="urn:jboss:domain:jaxrs:1.0"/>
         <subsystem xmlns="urn:jboss:domain:jpa:1.0">
             <jpa default-datasource=""/>
         </subsystem>
         <subsystem xmlns="urn:jboss:domain:sar:1.0"/>
         <subsystem xmlns="urn:jboss:domain:transactions:1.0">
-            <recovery-environment socket-binding="txn-recovery-environment" status-socket-binding="txn-status-manager"
-                    recovery-listener="false" />
             <core-environment>
                 <process-id>
-                    <uuid />
+                    <uuid/>
                 </process-id>
             </core-environment>
-            <coordinator-environment enable-tsm-status="false"/>
+            <recovery-environment socket-binding="txn-recovery-environment" status-socket-binding="txn-status-manager"/>
+            <coordinator-environment default-timeout="300"/>
+            <object-store/>
         </subsystem>
         <subsystem xmlns="urn:jboss:domain:jca:1.0">
-            <archive-validation enabled="false" />
-            <bean-validation enabled="false" />
+            <archive-validation enabled="false"/>
+            <bean-validation enabled="false"/>
             <default-workmanager>
-                <short-running-threads blocking="true">
-                <core-threads count="10" per-cpu="20"/>
-                        <queue-length count="10" per-cpu="20"/>
-                        <max-threads count="10" per-cpu="20"/>
-                        <keepalive-time time="10" unit="seconds"/>
+                <short-running-threads blocking="true" allow-core-timeout="false">
+                    <core-threads count="10" per-cpu="20"/>
+                    <queue-length count="10" per-cpu="20"/>
+                    <max-threads count="10" per-cpu="20"/>
+                    <keepalive-time time="10" unit="SECONDS"/>
                 </short-running-threads>
-                <long-running-threads blocking="true">
-                        <core-threads count="10" per-cpu="20"/>
-                        <queue-length count="10" per-cpu="20"/>
-                        <max-threads count="10" per-cpu="20"/>
-                        <keepalive-time time="10" unit="seconds"/>
+                <long-running-threads blocking="true" allow-core-timeout="false">
+                    <core-threads count="10" per-cpu="20"/>
+                    <queue-length count="10" per-cpu="20"/>
+                    <max-threads count="10" per-cpu="20"/>
+                    <keepalive-time time="10" unit="SECONDS"/>
                 </long-running-threads>
             </default-workmanager>
         </subsystem>
         <subsystem xmlns="urn:jboss:domain:datasources:1.0">
             <datasources>
-                <datasource jndi-name="java:/H2DS" enabled="true" use-java-context="true" pool-name="H2DS">
-                    <connection-url>jdbc:h2:${jboss.server.data.dir}/test;DB_CLOSE_DELAY=-1</connection-url>
-                    <driver>h2</driver>
-                    <pool></pool>
+                <datasource jndi-name="java:jboss/datasources/ExampleDS" pool-name="H2DS" enabled="true" jta="true" use-java-context="true" use-ccm="true">
+                    <connection-url>
+                        jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+                    </connection-url>
+                    <driver>
+                        h2
+                    </driver>
+                    <pool>
+                        <prefill>
+                            false
+                        </prefill>
+                        <use-strict-min>
+                            false
+                        </use-strict-min>
+                        <flush-strategy>
+                            FailingConnectionOnly
+                        </flush-strategy>
+                    </pool>
                     <security>
-                        <user-name>sa</user-name>
-                        <password>sa</password>
+                        <user-name>
+                            sa
+                        </user-name>
+                        <password>
+                            sa
+                        </password>
                     </security>
-                    <validation></validation>
-                    <timeout></timeout>
-                    <statement></statement>
+                    <validation>
+                        <validate-on-match>
+                            false
+                        </validate-on-match>
+                        <background-validation>
+                            false
+                        </background-validation>
+                        <useFastFail>
+                            false
+                        </useFastFail>
+                    </validation>
                 </datasource>
                 <drivers>
                     <driver name="h2" module="com.h2database.h2">
-                        <xa-datasource-class>org.h2.jdbcx.JdbcDataSource</xa-datasource-class>
+                        <xa-datasource-class>
+                            org.h2.jdbcx.JdbcDataSource
+                        </xa-datasource-class>
                     </driver>
                 </drivers>
             </datasources>
-       </subsystem>
-       <subsystem xmlns="urn:jboss:domain:resourceadapters:1.0" />
-        <subsystem xmlns="urn:jboss:domain:web:1.0">
-            <connector name="http" scheme="http" protocol="HTTP/1.1" socket-binding="http"/>
-            <virtual-server name="localhost" enable-welcome-root="false" />
         </subsystem>
-        <subsystem xmlns="urn:jboss:domain:weld:1.0" />
+        <subsystem xmlns="urn:jboss:domain:resource-adapters:1.0"/>
+        <subsystem xmlns="urn:jboss:domain:web:1.0">
+            <connector name="http" protocol="HTTP/1.1" socket-binding="http" scheme="http"/>
+            <virtual-server name="localhost">
+                <alias name="example.com"/>
+            </virtual-server>
+        </subsystem>
+        <subsystem xmlns="urn:jboss:domain:weld:1.0"/>
         <subsystem xmlns="urn:jboss:domain:deployment-scanner:1.0">
-            <deployment-scanner scan-interval="5000" relative-to="jboss.server.base.dir" path="deployments" />
+            <deployment-scanner name="default" path="deployments" scan-enabled="true" scan-interval="5000" relative-to="jboss.server.base.dir" deployment-timeout="60"/>
         </subsystem>
     </profile>
-
     <interfaces>
         <interface name="management">
-            <loopback-address value="127.0.0.1"/>
+            <loopback-address value="127.0.250.1"/>
         </interface>
         <interface name="public">
-           <loopback-address value="127.0.0.1"/>
+            <loopback-address value="127.0.250.1"/>
         </interface>
     </interfaces>
-
-        <socket-binding-group name="standard-sockets" default-interface="public">
-           <socket-binding name="jndi" port="1099"/>
-           <socket-binding name="http" port="8080"/>
-           <socket-binding name="https" port="8447"/>
-           <socket-binding name="txn-recovery-environment" port="4712"/>
-           <socket-binding name="txn-status-manager" port="4713"/>
-        </socket-binding-group>
-
-    <system-properties>
-        <property name="foo" value="bar"/>
-        <property name="key" value="value"/>
-    </system-properties>
-
+    <socket-binding-group name="standard-sockets" default-interface="public">
+        <socket-binding name="jndi" port="1099"/>
+        <socket-binding name="jmx-connector-registry" port="1090"/>
+        <socket-binding name="jmx-connector-server" port="1091"/>
+        <socket-binding name="http" port="8080"/>
+        <socket-binding name="https" port="8443"/>
+        <socket-binding name="remoting" port="4447"/>
+        <socket-binding name="txn-recovery-environment" port="4712"/>
+        <socket-binding name="txn-status-manager" port="4713"/>
+    </socket-binding-group>
 </server>
