@@ -1,4 +1,4 @@
 # The name of the jbossas cartridge dir under /usr/libexec/li/cartridges
 jboss_version=jbossas-7.0
 # The location of jbossas server installation
-jboss_home=/opt/jboss-7.0.0.Beta6OS
+jboss_home=/opt/jboss-7.0.0.Beta7OS
