@@ -1,3 +1,6 @@
+* Sun Jun 26 Scott Stark <sstark@redhat.com>
+- Update to jbossas-7.0.0.Beta7OS
+
 * Thu Jun 16 Scott Stark <sstark@redhat.com>
 - Update to jbossas-7.0.0.Beta6OS
 
